gcc/testsuite/rust/rustc/ui/associated-consts/associated-const-impl-wrong-lifetime.rs
trait Foo {
    const NAME: &'static str;
}


impl<'a> Foo for &'a () {
    const NAME: &'a str = "unit";
// { dg-error ".E0308." "" { target *-*-* } .-1 }
}

fn main() {}

